feat: Adds support for cancellationPolicies and updated ratePlans format
