# src/controllers/hotels.js
@@ -13,7 +13,7 @@ const WT = require('../services/wt');
  *
  * - description
  * - description.roomTypes.*
- * - ratePlans.*
+ * - ratePlans.ratePlans.*
  * - availability.latestSnapshot
  * - availability.updates.*
  */
@@ -21,7 +21,7 @@ function _addTimestamps (body) {
   const timestampedObjects = _([
     [_.get(body, 'description')],
     _.values(_.get(body, ['description', 'roomTypes'])),
-    _.values(_.get(body, ['ratePlans'])),
+    _.values(_.get(body, ['ratePlans', 'ratePlans'])),
     [_.get(body, 'availability.latestSnapshot')],
     _.values(_.get(body, 'availability.updates')),
   ])
